
        - croak when a coro being cancelled tries to block (e.g. while
          executing a guard block), instead of crashing or deadlocking.
        - implement a Coro->safe_cancel method that might fail, but
          cancels in a "safer" way if it succeeds.
	- implement Coro->cancel in XS for a 20% speed improvement, and to
          be able to implement mutual cancellation.
        - cancelling a coro while it itself is cancelling another coro is
          now supported and working, instead of triggering an assertion.
	- be a bit more crash-resistant when calling (buggy) on_destroy
          callbacks (best effort).
        - move on_destroy into the slf_frame, to allow extension slf
          functions to have destructors.

5.372 Wed Feb 23 06:14:30 CET 2011
	- apparently mingw doesn't provide a working gettimeofday, try to
          work around that by relying on Time::HiRes (indirectly brought to
          my attention by Max Maischein).
        - fix some portability issues when Time::HiRes was used.

5.371 Mon Feb 21 14:36:08 CET 2011
	- backport to windows process emulation code again.

5.37  Sat Feb 19 07:49:44 CET 2011
	- add a big "Coro thread life cycle" section to "man Coro".
	- try a tentative workaround against the breakage that 5.13 has
          introduced without depreciation period. sigh.
        - no longer use Time::HiRes if gettimeofday is available, which
          saves quite a lot of memory.

5.36  Sun Feb 13 05:33:41 CET 2011
	- automatically load Coro::Channel, Coro::RWLock, Coro::Semaphore,
          Coro::SemaphoreSet, Coro::Signal and Coro::Specific on first "new"
          method call.
        - undocument Coro::Timer::sleep and obsolete whole module.
        - optimise Coro::Timer::timeout memory and cpu usage.
        - slightly updated Coro::Intro for recent changes.
        - do not initialise PL_dirty anymore.

5.25  Thu Nov 11 01:08:39 CET 2010
	- try a different approach on netbsd - netbsd 5 finally has marginally